--- a/package.json
+++ b/package.json
@@ -8,13 +8,17 @@
     "test": "nx test"
   },
   "private": true,
-  "dependencies": {},
   "devDependencies": {
-    "@nrwl/tao": "13.8.3",
+    "@commitlint/cli": "^16.2.1",
+    "@commitlint/config-conventional": "^16.2.1",
     "@nrwl/cli": "13.8.3",
+    "@nrwl/tao": "13.8.3",
     "@nrwl/workspace": "13.8.3",
     "@types/node": "16.11.7",
-    "typescript": "~4.5.2",
-    "prettier": "^2.5.1"
+    "commitizen": "^4.2.4",
+    "commitlint-config-gitmoji": "^2.2.5",
+    "cz-customizable": "^6.3.0",
+    "prettier": "^2.5.1",
+    "typescript": "~4.5.2"
   }
 }
