--- a/package.json
+++ b/package.json
@@ -5,9 +5,14 @@
   "scripts": {
     "start": "nx serve",
     "build": "nx build",
-    "test": "nx test"
+    "test": "nx test",
+    "release": "standard-version -a"
   },
   "private": true,
+  "engines": {
+    "node": "v16.14.0",
+    "npm":"8.3.1"
+  },
   "devDependencies": {
     "@commitlint/cli": "^16.2.1",
     "@commitlint/config-conventional": "^16.2.1",
@@ -19,6 +24,16 @@
     "commitlint-config-gitmoji": "^2.2.5",
     "cz-customizable": "^6.3.0",
     "prettier": "^2.5.1",
+    "standard-version": "^9.3.2",
     "typescript": "~4.5.2"
+  },
+  "standard-version": {
+    "skip": {
+      "changelog": true
+    },
+    "scripts": {
+      "postbump": "gitmoji-changelog update",
+      "precommit": "git add CHANGELOG.md"
+    }
   }
 }
