--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
     "start": "nx serve",
     "build": "nx build",
     "test": "nx test",
+    "postinstall": "husky install",
     "release": "standard-version -a"
   },
   "private": true,
   "engines": {
     "node": "v16.14.0",
-    "npm":"8.3.1"
+    "npm": "8.3.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^16.2.1",
@@ -23,6 +24,7 @@
     "commitizen": "^4.2.4",
     "commitlint-config-gitmoji": "^2.2.5",
     "cz-customizable": "^6.3.0",
+    "husky": "^7.0.4",
     "prettier": "^2.5.1",
     "standard-version": "^9.3.2",
     "typescript": "~4.5.2"
