--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nrwl/tao": "13.8.3",
     "@nrwl/web": "13.8.3",
     "@nrwl/workspace": "13.8.3",
+    "@ns3/nx-serverless": "^2.2.0",
     "@testing-library/react": "12.1.2",
     "@testing-library/react-hooks": "7.0.2",
     "@types/jest": "27.0.2",
@@ -52,6 +53,9 @@
     "jest": "27.2.3",
     "prettier": "^2.5.1",
     "react-test-renderer": "17.0.2",
+    "serverless": "^3.2.1",
+    "serverless-bundle": "^5.3.0",
+    "serverless-offline": "^8.4.0",
     "standard-version": "^9.3.2",
     "ts-jest": "27.0.5",
     "typescript": "~4.5.2"
