--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,14 @@ testem.log
 .DS_Store
 Thumbs.db
 
+# .env files
+.env
+.env.*
+!.env.local
+!.env.*.gpg
+
 # Serverless
 .serverless
 .webpack
+
+.envrc
