--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,7 +15,8 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@zingain-workspace/codegen-sdk": ["libs/codegen-sdk/src/index.ts"]
+      "@zingain-workspace/codegen-sdk": ["libs/codegen-sdk/src/index.ts"],
+      "@zingain-workspace/shared-backend": ["libs/shared-backend/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
