--- a/package.json
+++ b/package.json
@@ -89,9 +89,12 @@
     "@nhost/react-apollo": "^2.1.4",
     "@nhost/react-auth": "^2.0.8",
     "@nrwl/next": "13.8.3",
+    "axios": "^0.26.0",
     "core-js": "^3.6.5",
     "graphql": "^15.8.0",
+    "graphql-request": "^4.0.0",
     "graphql-tag": "^2.12.6",
+    "lodash": "^4.17.21",
     "next": "12.1.0",
     "nhost-js-sdk": "^3.1.0",
     "react": "17.0.2",
