:sparkles: feat(hasura): auto migration for hasura deploy. Test completed

--- a/services/hasura/metadata/databases/default/tables/public_users.yaml
+++ b/services/hasura/metadata/databases/default/tables/public_users.yaml
@@ -11,3 +11,11 @@ object_relationships:
       remote_table:
         name: accounts
         schema: auth
+array_relationships:
+- name: todos
+  using:
+    foreign_key_constraint_on:
+      column: created_by
+      table:
+        name: todos
+        schema: public
