--- a/services/hasura/metadata/databases/default/tables/tables.yaml
+++ b/services/hasura/metadata/databases/default/tables/tables.yaml
@@ -5,4 +5,5 @@
 - "!include auth_providers.yaml"
 - "!include auth_refresh_tokens.yaml"
 - "!include auth_roles.yaml"
+- "!include public_todos.yaml"
 - "!include public_users.yaml"
