--- a/deployments/development/docker-compose-development.yml
+++ b/deployments/development/docker-compose-development.yml
@@ -40,6 +40,15 @@ services:
     volumes:
       - minio_data:/data
 
+  auto-migrations:
+    image: hasura/graphql-engine:v2.1.1.cli-migrations-v3
+    restart: always
+    build:
+      context: $BASE_PATH/services/hasura
+    depends_on:
+      - 'minio'
+    env_file: $BASE_PATH/services/hasura/.env.development
+
 volumes:
   db_data:
   minio_data:
