--- a/apps/frontend/main-e2e/project.json
+++ b/apps/frontend/main-e2e/project.json
@@ -7,11 +7,11 @@
       "executor": "@nrwl/cypress:cypress",
       "options": {
         "cypressConfig": "apps/frontend/main-e2e/cypress.json",
-        "devServerTarget": "frontend-main:serve"
+        "devServerTarget": "frontend:serve"
       },
       "configurations": {
         "production": {
-          "devServerTarget": "frontend-main:serve:production"
+          "devServerTarget": "frontend:serve:production"
         }
       }
     },
@@ -24,5 +24,5 @@
     }
   },
   "tags": [],
-  "implicitDependencies": ["frontend-main"]
+  "implicitDependencies": ["frontend"]
 }
