:bug: fix(hasura): install urql, upt roles

--- a/services/hasura-backend-plus/.env.development
+++ b/services/hasura-backend-plus/.env.development
@@ -56,8 +56,8 @@ JWT_CUSTOM_FIELDS=""
 # TIME_FRAME=900000
 
 ###################### Accounts #######################
-DEFAULT_ALLOWED_USER_ROLES='user,me'
-ALLOWED_USER_ROLES='user,me'
+DEFAULT_ALLOWED_USER_ROLES='user'
+ALLOWED_USER_ROLES='user'
 DEFAULT_ANONYMOUS_ROLE='anonymous'
 
 ## List of additional comma-separated user fields that are expected on registration
