--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "regenerator-runtime": "0.13.7",
-    "tslib": "^2.0.0"
+    "tslib": "^2.0.0",
+    "urql": "^2.2.0"
   }
 }
