--- a/services/hasura/cli/.env.development
+++ b/services/hasura/cli/.env.development
@@ -1,2 +1,3 @@
 HASURA_GRAPHQL_ENDPOINT="http://localhost:8080"
+HBP_ENDPOINT="http://localhost:4000"
 HASURA_GRAPHQL_ADMIN_SECRET="LZrEbLC2wdqIBQjqgOqNwzuUdEWVmzdmtiZBV5LDUTLcXbCw0TR3JZ7"
